@@ -10,6 +10,9 @@
 /* We're building the pthreads-win32 library */
 #define PTW32_BUILD
 
+/* CPU affinity */
+#define HAVE_CPU_AFFINITY
+
 /* Do we know about the C type sigset_t? */
 #undef HAVE_SIGSET_T
 
@@ -109,6 +112,7 @@
  * to the pthreads-win32 maintainer. Thanks.
  *********************************************************************/
 #if defined(WINCE)
+#undef  HAVE_CPU_AFFINITY
 #define NEED_DUPLICATEHANDLE
 #define NEED_CREATETHREAD
 #define NEED_ERRNO
