@@ -1,3 +1,7 @@
+2013-07-23  Ross Johnson <ross dot johnson at homemail dot com dot au>
+
+	* affinity*.c: Skipped under WINCE.
+
 2013-07-02  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
 	* threestage.c: New test/example code; not written specifically as
